Progress on template

--- a/www/index.html
+++ b/www/index.html
@@ -56,5 +56,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/reload/reload.js"></script>
   </body>
 </html>
