--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
@@ -25,11 +24,11 @@
 	  	<p>Redefining estiamtes..</p>
 	  </div>
 	  <div class = "row">
-	  	<div class = "col-sm-3">
+	  	<div class = "col-sm-4">
 	  		<h3>The swarm</h3>
 	  		<p>Use the swarm to decide on your projects deadlines.</p>
 	  	</div>
-	  	<div class="col-sm-3">
+	  	<div class="col-sm-4">
 	  		<h3>Log On<h3>
 	  		<form role="form">
 			    <div class="form-group">
@@ -46,11 +45,15 @@
 			    <button type="submit" class="btn btn-default">Submit</button>
 		 	</form>
 	  	</div>
-	  	<div class="col-sm-3">
+	  	<div class="col-sm-4">
 			<p>Input something in the input box:</p>
 			<p>Name : <input type="text" ng-model="name" placeholder="Enter name here"></p>
 			<P>Hello {{name}}</P>
 			</div>
+	  	</div>
+	  	<div class = "col-sm-4">
+	  		<h3>Dream big an dare to fail</h3>
+	  		<p>Just add a sunset and it will be inspirational as hell.</p>
 	  	</div>
   </div>
 
