--- a/www/index.html
+++ b/www/index.html
@@ -17,8 +17,40 @@
     <!--<link href="starter-template.css" rel="stylesheet">-->
   </head>
 
-  <body ng-app>
-  <div class="container">
+  <body ng-app = "main" ng-controller="mainCtrl">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	  <div class="container">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">Bootstrap theme</a>
+	    </div>
+	    <div id="navbar" class="navbar-collapse collapse">
+	      <ul class="nav navbar-nav">
+	        <li class="active"><a href="#">Home</a></li>
+	        <li><a href="#about">About</a></li>
+	        <li><a href="#contact">Contact</a></li>
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+	          <ul class="dropdown-menu" role="menu">
+	            <li><a href="#">Action</a></li>
+	            <li><a href="#">Another action</a></li>
+	            <li><a href="#">Something else here</a></li>
+	            <li class="divider"></li>
+	            <li class="dropdown-header">Nav header</li>
+	            <li><a href="#">Separated link</a></li>
+	            <li><a href="#">One more separated link</a></li>
+	          </ul>
+	        </li>
+	      </ul>
+	    </div><!--/.nav-collapse -->
+	  </div>
+	</nav>
+  <div class="container theme-showcase" role="main">  
 	  <div class = "jumbotron" >
   		<h1>Estimate Swarm</h1>
 	  	<p>Redefining estiamtes..</p>
@@ -65,5 +97,6 @@
     <script src="./lib/bootstrap.min.js"></script>
     <!-- Angular -->
     <script src="./lib/angular.min.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
