we can now acces the database fom anywhere. Also we can now dd names and remove them

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
 				<th>Names</th>
 				</tr>
 			  <tr ng-repeat="x in names">
-			    <td>{{ x }}</td>
+			    <td>{{ x.name }}</td>
 			  </tr>
 			</table>
 	  	</div>
