fixed a styling issue

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
 
     <!-- Bootstrap core CSS -->
     <link href="./lib/bootstrap.min.css" rel="stylesheet">
+    <style>
+		body { padding-top: 70px; }
+	</style>
+
 
     <!-- Custom styles for this template -->
     <!--<link href="starter-template.css" rel="stylesheet">-->
