added a nice button

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
 	  <div class = "jumbotron" >
   		<h1>Estimate Swarm</h1>
 	  	<p>Redefining estiamtes..</p>
+	  	<button class="btn btn-default" >Create Project</button>
 	  </div>
 	  <div class = "row">
 	  	<div class = "col-sm-4">
