jumbltron color change

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <link href="./lib/bootstrap.min.css" rel="stylesheet">
     <style>
 		body { padding-top: 70px; }
+		.jumbotronColor {
+			background: #66CCFF;
+		}
 	</style>
 
 
@@ -58,9 +61,9 @@
 	  </div>
 	</nav>
   <div class="container theme-showcase" role="main">  
-	  <div class = "jumbotron" >
+	  <div class = "jumbotron jumbotronColor" >
   		<h1>Estimate Swarm</h1>
-	  	<p>Redefining estiamtes..</p>
+	  	<p>Redefining project estimations..</p>
 	  	<button class="btn btn-default" >Create Project</button>
 	  </div>
 	  <div class = "row">
