--- a/www/index.html
+++ b/www/index.html
@@ -10,98 +10,36 @@
 
     <title>Estimate Swarm</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="./lib/bootstrap.min.css" rel="stylesheet">
-    <style>
-		body { padding-top: 70px; }
-		.jumbotronColor {
-			background: #66CCFF;
-		}
-	</style>
+    <!-- angular material core CSS -->
+    <link href="./lib/angular-material/angular-material.css" rel="stylesheet">
 
-
-    <!-- Custom styles for this template -->
     <!--<link href="starter-template.css" rel="stylesheet">-->
   </head>
 
   <body ng-app = "main" ng-controller="mainCtrl">
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-	  <div class="container">
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="#">
-	      <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-	      Estimate Swarm
-	      </a>
-	    </div>
-	    <div id="navbar" class="navbar-collapse collapse">
-	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">Home</a></li>
-	        <li><a href="#about">About</a></li>
-	        <li><a href="#contact">Contact</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-	          <ul class="dropdown-menu" role="menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li class="divider"></li>
-	            <li class="dropdown-header">Nav header</li>
-	            <li><a href="#">Separated link</a></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	      </ul>
-	    </div><!--/.nav-collapse -->
-	  </div>
-	</nav>
-  <div class="container theme-showcase" role="main">  
-	  <div class = "jumbotron jumbotronColor" >
-  		<h1>Estimate Swarm</h1>
-	  	<p>Redefining project estimations..</p>
-	  	<button class="btn btn-default" >Create Project</button>
-	  </div>
-	  <div class = "row">
-	  	<div class = "col-sm-4">
-	  		<h3>The swarm</h3>
-	  		<p>Use the swarm to decide on your projects deadlines.</p>
-	  		<p>Data from the database!</p>
-			<table class="table table-striped">
-				<tr>
-				<th>Names</th>
-				<th>Surnames</th>
-				</tr>
-			  <tr ng-repeat="x in names">
-			    <td>{{ x.name }}</td>
-			    <td>{{ x.surname }}</td>
-			  </tr>
-			</table>
-	  	</div>
-	  	<div class="col-sm-4">
-	  		<form method="post">
-				<span class="label label-info">Add mame to database</span>
-				<p>Name : <input  class="form-control" type="text" ng-model="name" placeholder="Enter name here">
-				<p>Surname : <input  class="form-control" type="text" ng-model="surname" placeholder="Enter surname here">
-				<button ng-click="sendName()" class="btn btn-default" >Send</button>
-			</form>
-	  	</div>
-	  	<div class = "col-sm-4">
-	  		<h3>Dream big and dare to fail</h3>
-	  		<p>Just add a sunset and it will be inspirational as hell.</p>
-	  	</div>
-  </div>
-
+  <md-toolbar layout="row">
+      <div class="md-toolbar-tools">
+        <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
+          <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
+        </md-button>
+        <h1>Hello World</h1>
+      </div>
+    </md-toolbar>
+    <div layout="row" flex>
+        <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+          
+        </md-sidenav>
+        <div layout="column" flex id="content">
+            <md-content layout="column" flex class="md-padding">
+            
+            </md-content>
+        </div>
+    </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="./lib/jquery.min.js"></script>
-    <!--<script src="./lib/angular.min.js"></script>-->
-    <script src="./lib/bootstrap.min.js"></script>
+    <script src="./lib/angular-material/angular-material.min.js"></script>
     <!-- Angular -->
     <script src="./lib/angular.min.js"></script>
     <script src="./app.js"></script>
