--- a/www/index.html
+++ b/www/index.html
@@ -1,47 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="Hanrich/Frikkie/Andre/Hugo/Chris">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>Estimate Swarm</title>
-
-    <!-- angular material core CSS -->
-    <link href="./lib/angular-material/angular-material.css" rel="stylesheet">
-
-    <!--<link href="starter-template.css" rel="stylesheet">-->
-  </head>
-
-  <body ng-app = "main" ng-controller="mainCtrl">
-  <md-toolbar layout="row">
-      <div class="md-toolbar-tools">
-        <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
-          <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
-        </md-button>
-        <h1>Hello World</h1>
-      </div>
-    </md-toolbar>
-    <div layout="row" flex>
-        <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
-          
-        </md-sidenav>
-        <div layout="column" flex id="content">
-            <md-content layout="column" flex class="md-padding">
-            
-            </md-content>
-        </div>
+<html>
+<head>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
+</head>
+    <body ng-app="main">
+ 
+    <div ng-controller="mainCtrl">
+ 
     </div>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./lib/jquery.min.js"></script>
-    <script src="./lib/angular-material/angular-material.min.js"></script>
-    <!-- Angular -->
-    <script src="./lib/angular.min.js"></script>
-    <script src="./app.js"></script>
-  </body>
+ 
+    <script src="/node_modules/angular/angular.js"></script> 
+    <script src="/node_modules/angular-aria/angular-aria.js"></script> 
+    <script src="/node_modules/angular-animate/angular-animate.js"></script> 
+    <script src="/node_modules/angular-material/angular-material.js"></script> 
+    <script src="app.js"></script> 
+ 
+</body>
 </html>
