--- a/www/index.html
+++ b/www/index.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
 </head>
-    <body ng-app="main">
+    <body>
 
-    <div ng-controller="mainCtrl">
+    <div ng-controller="mainCtrl" layout="column" style="height:500px;" class="sidenavdemoBasicUsage" ng-app="main">
 
         <section layout="row" flex="">
 
