--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
                 <h1 class="md-toolbar-tools">Sidenav Left</h1>
               </md-toolbar>
               <md-content layout-padding="">
-                <md-button ng-click="close()" class="md-primary" hide-gt-md="">
+                <md-button ng-click="close()" class="md-primary" hide-gt-md=""  ng-controller="LeftCtrl " >
                   Close Sidenav Left
                 </md-button>
                 <p hide-md="" show-gt-md="">
