Added a div ayout

--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,13 @@
             <md-content flex="" layout-padding="">
 
               <div layout="column" layout-fill="" layout-align="top center">
-                <p>
-                The left sidenav will 'lock open' on a medium (&gt;=960px wide) device.
-                </p>
+                <md-whiteframe class="md-whiteframe-z1" layout layout-align="center center">
+                <span> 
+                  <p>
+                  The left sidenav will 'lock open' on a medium (&gt;=960px wide) device.
+                  </p>
+                </span>
+                </md-whiteframe>
                 <p>
                 The right sidenav will focus on a specific child element.
                 </p>
