Added initial toolbar

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,6 @@
 
 		<section layout="row" flex="">
 			<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
-
 				<md-toolbar class="md-theme-indigo">
 					<h1 class="md-toolbar-tools">Sidenav Left</h1>
 				</md-toolbar>
@@ -23,10 +22,26 @@
 						narrow your display.
 					</p>
 				</md-content>
-
 			</md-sidenav>
 
 			<md-content flex="" layout-padding="">
+				<md-toolbar>
+					<div class="md-toolbar-tools">
+						<md-button class="md-icon-button" aria-label="Settings">
+							<md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
+						</md-button>
+						<h2>
+							<span>Toolbar with Icon Buttons</span>
+						</h2>
+						<span flex=""></span>
+						<md-button class="md-icon-button" aria-label="Favorite">
+							<md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>
+						</md-button>
+						<md-button class="md-icon-button" aria-label="More">
+							<md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>
+						</md-button>
+					</div>
+				</md-toolbar>
 
 				<div layout="column" layout-fill="" layout-align="top center">
 					<p>
@@ -44,7 +59,6 @@
 				</div>
 
 				<div flex=""></div>
-
 			</md-content>
 		</section>
 
