--- a/www/index.html
+++ b/www/index.html
@@ -7,8 +7,13 @@
 	<body ng-controller="mainCtrl" ng-app="main" layout="row">
 
 			<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
-				<md-toolbar class="md-theme-indigo">
-					<h1 class="md-toolbar-tools">Sidenav Left</h1>
+				<md-toolbar>
+					<div class="md-toolbar-tools">
+						<h1 class="md-toolbar-tools"><span>Sidenav Left</span></h1>
+						<span flex></span>
+						<md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
+						</md-button>
+					</div>
 				</md-toolbar>
 				<md-content layout-padding="">
 					<md-button ng-click="close()" class="md-primary" hide-gt-md=""	ng-controller="LeftCtrl " >
