--- a/www/index.html
+++ b/www/index.html
@@ -4,11 +4,8 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
 </head>
-	<body>
+	<body ng-controller="mainCtrl" ng-app="main" layout="row">
 
-	<div ng-controller="mainCtrl" layout="column" style="height:500px;" class="sidenavdemoBasicUsage" ng-app="main">
-
-		<section layout="row" flex="">
 			<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
 				<md-toolbar class="md-theme-indigo">
 					<h1 class="md-toolbar-tools">Sidenav Left</h1>
@@ -23,53 +20,49 @@
 					</p>
 				</md-content>
 			</md-sidenav>
-
-			<md-content flex="" layout-padding="">
-				<md-toolbar>
-					<div class="md-toolbar-tools">
-						<md-button class="md-icon-button md-primary" ng-click="toggleLeft()" aria-label="Settings" hide-gt-md="">
-							<md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
-						</md-button>
-						<h2>
-							<span>Welcome to the Estimate Swarm</span>
-						</h2>
-						<span flex=""></span>
-						<md-button class="md-icon-button" aria-label="Favorite">
-							<md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>
-						</md-button>
-						<md-button class="md-icon-button" aria-label="More">
-							<md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>
-						</md-button>
-					</div>
-				</md-toolbar>
-
-				<div layout="column" layout-fill="" layout-align="top center">
-					<md-whiteframe class="md-whiteframe-z1" layout layout-align="center center">
-					<span> 
-						<p>
-							The Estimate Swarm will aid in estimating projects by crowd sourcing information from individuals with experience in the field.
-						</p>
-						
-						<md-button ng-click="" class="md-raised md-primary">
-							Create a new project
-						</md-button>
-					</span>
-					</md-whiteframe>
+	<div layout="column" role="main" flex>
+		<md-toolbar>
+			<div class="md-toolbar-tools">
+				<md-button class="md-icon-button md-primary" ng-click="toggleLeft()" aria-label="Settings" hide-gt-md="">
+					<md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
+				</md-button>
+				<h2>
+					<span>Welcome to the Estimate Swarm</span>
+				</h2>
+				<span flex=""></span>
+				<md-button class="md-icon-button" aria-label="Favorite">
+					<md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>
+				</md-button>
+				<md-button class="md-icon-button" aria-label="More">
+					<md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>
+				</md-button>
+			</div>
+		</md-toolbar>
+		<md-content flex="" layout-padding="">
+			<div layout="column" layout-fill="" layout-align="top center">
+				<md-whiteframe class="md-whiteframe-z1" layout layout-align="center center">
+				<span> 
 					<p>
-						The right sidenav will focus on a specific child element.
+						The Estimate Swarm will aid in estimating projects by crowd sourcing information from individuals with experience in the field.
 					</p>
 
-					<div>
-						<!-- <md-button ng-click="toggleLeft()" class="md-primary" hide-gt-md="">
-							Toggle left
-						</md-button> -->
-					</div>
+					<md-button ng-click="" class="md-raised md-primary">
+						Create a new project
+					</md-button>
+				</span>
+				</md-whiteframe>
+				<p>
+					The right sidenav will focus on a specific child element.
+				</p>
+
+				<div>
+					<!-- <md-button ng-click="toggleLeft()" class="md-primary" hide-gt-md="">
+						Toggle left
+					</md-button> -->
 				</div>
-
-				<div flex=""></div>
-			</md-content>
-		</section>
-
+			</div>
+			<div flex=""></div>
+		</md-content>
 	</div>
 
 	<script src="/node_modules/angular/angular.js"></script>
