--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
+	<link rel="stylesheet" href="/node_modules/angular-material-icons/angular-material-icons.css">
+
 </head>
 	<body ng-controller="mainCtrl" ng-app="main" layout="row">
 
@@ -24,18 +26,12 @@
 		<md-toolbar>
 			<div class="md-toolbar-tools">
 				<md-button class="md-icon-button md-primary" ng-click="toggleLeft()" aria-label="Settings" hide-gt-md="">
-					<md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
+					<ng-md-icon icon="more_vert" style="fill: white"></ng-md-icon>
 				</md-button>
 				<h2>
 					<span>Welcome to the Estimate Swarm</span>
 				</h2>
 				<span flex=""></span>
-				<md-button class="md-icon-button" aria-label="Favorite">
-					<md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>
-				</md-button>
-				<md-button class="md-icon-button" aria-label="More">
-					<md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>
-				</md-button>
 			</div>
 		</md-toolbar>
 		<md-content flex="" layout-padding="">
@@ -69,6 +65,8 @@
 	<script src="/node_modules/angular-aria/angular-aria.js"></script>
 	<script src="/node_modules/angular-animate/angular-animate.js"></script>
 	<script src="/node_modules/angular-material/angular-material.js"></script>
+	<script src="/node_modules/angular-material-icons/angular-material-icons.js"></script>
+
 	<script src="app.js"></script>
 </body>
 </html>
