--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 			<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
 				<md-toolbar class="md-theme-indigo">
 					<div class="md-toolbar-tools">
-						<h1><span>Sidenav Left</span></h1>
+						<h1><span>Menu</span></h1>
 						<span flex></span>
 						<md-button class="md-icon-button md-primary" ng-click="toggleLeft()" aria-label="Settings" hide-gt-md="">
 							<md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
@@ -19,9 +19,6 @@
 					</div>
 				</md-toolbar>
 				<md-content layout-padding="">
-					<md-button ng-click="close()" class="md-primary" hide-gt-md=""	ng-controller="LeftCtrl " >
-						Close Sidenav Left
-					</md-button>
 					<p hide-md="" show-gt-md="">
 						This sidenav is locked open on your device. To go back to the default behavior,
 						narrow your display.
