Button icons changed

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
 						<h1><span>Menu</span></h1>
 						<span flex></span>
 						<md-button class="md-icon-button md-primary" ng-click="toggleLeft()" aria-label="Settings" hide-gt-md="">
-							<md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
+							<ng-md-icon icon="chevron_left" style="fill: white"></ng-md-icon>
 						</md-button>
 					</div>
 				</md-toolbar>
@@ -29,7 +29,7 @@
 		<md-toolbar>
 			<div class="md-toolbar-tools">
 				<md-button class="md-icon-button md-primary" ng-click="toggleLeft()" aria-label="Settings" hide-gt-md="">
-					<ng-md-icon icon="more_vert" style="fill: white"></ng-md-icon>
+					<ng-md-icon icon="menu" style="fill: white"></ng-md-icon>
 				</md-button>
 				<h2>
 					<span>Welcome to the Estimate Swarm</span>
