Added angular routes

--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,10 @@
 				<p>
 					The right sidenav will focus on a specific child element.
 				</p>
-
+				<!-- New view items -->
+				<div ng-view>
+					
+				</div>
 				<div>
 					<!-- <md-button ng-click="toggleLeft()" class="md-primary" hide-gt-md="">
 						Toggle left
@@ -66,7 +69,7 @@
 	<script src="/node_modules/angular-animate/angular-animate.js"></script>
 	<script src="/node_modules/angular-material/angular-material.js"></script>
 	<script src="/node_modules/angular-material-icons/angular-material-icons.js"></script>
-
+	<script src="node_modules/angular-route/angular-route.min.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
