--- a/www/index.html
+++ b/www/index.html
@@ -74,5 +74,6 @@
 	<script src="/node_modules/angular-material-icons/angular-material-icons.js"></script>
 	<script src="node_modules/angular-route/angular-route.min.js"></script>
 	<script src="app.js"></script>
+	<script src="./javascript/controllers/project-create-controller.js"></script>
 </body>
 </html>
