estimate page changes

--- a/www/index.html
+++ b/www/index.html
@@ -77,5 +77,6 @@
 	<script src="app.js"></script>
 	<script src="./javascript/controllers/project-create-controller.js"></script>
 	<script src="./javascript/controllers/main-controller.js"></script>
+	<script src="./javascript/controllers/estimation-controller.js"></script>
 </body>
 </html>
