we can now show individual projects

--- a/www/index.html
+++ b/www/index.html
@@ -78,5 +78,6 @@
 	<script src="./javascript/controllers/project-create-controller.js"></script>
 	<script src="./javascript/controllers/main-controller.js"></script>
 	<script src="./javascript/controllers/projects-controller.js"></script>
+	<script src="./javascript/controllers/project-controller.js"></script>
 </body>
 </html>
