We can now build a tree for the project

--- a/www/index.html
+++ b/www/index.html
@@ -79,5 +79,6 @@
 	<script src="./javascript/controllers/main-controller.js"></script>
 	<script src="./javascript/controllers/projects-controller.js"></script>
 	<script src="./javascript/controllers/project-controller.js"></script>
+	<script src="./javascript/controllers/tree-controller.js"></script>
 </body>
 </html>
