Estimation page changes

--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
+	<link rel="stylesheet" href="/css/estimation/estimation.css">
 </head>
 	<body ng-controller="mainCtrl" ng-app="main" layout="row">
 			<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
