--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,9 @@
 					<span>{{getPath()}}</span>
 				</h2>
 				<span flex=""></span>
+				<md-button class="md-fab" style="positon: absolute; left: -25pt; top: 23pt" aria-label="Go to project page" ng-click="goToProjectPage()">
+					<md-icon md-svg-src="img/icons/add.svg"></md-icon>
+				</md-button>
 			</div>
 		</md-toolbar>
 			<md-content flex="" layout-padding="">
