--- a/www/index.html
+++ b/www/index.html
@@ -87,5 +87,6 @@
 	<script src="./javascript/controllers/project-controller.js"></script>
 	<script src="./javascript/controllers/tree-controller.js"></script>
 	<script src="./javascript/controllers/login-controller.js"></script>
+	<script src="./javascript/services/authenticationService.js"></script>
 </body>
 </html>
