New Welcome Page

--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
 			<md-content flex="" layout-padding="">
 				<div layout="column" layout-fill="" layout-align="top center">
 					<!-- New view items -->
-					<div ng-view>
+					<div ng-view layout = "row">
 						
 					</div>
 					<div>
