Login seems to be working

--- a/www/index.html
+++ b/www/index.html
@@ -87,6 +87,11 @@
 	<script src="./javascript/controllers/project-controller.js"></script>
 	<script src="./javascript/controllers/tree-controller.js"></script>
 	<script src="./javascript/controllers/login-controller.js"></script>
+
+	<!-- Includes for our services -->
+
 	<script src="./javascript/services/authenticationService.js"></script>
+	<script src="./javascript/services/tokenInterceptor.js"></script>
+	<script src="./javascript/services/userService.js"></script>
 </body>
 </html>
