FAB Toolbar problem solved

--- a/www/index.html
+++ b/www/index.html
@@ -69,6 +69,10 @@
 			</md-content>
 		</div>
 
+	<!-- Includes for our external CSS files -->
+
+	<link rel="stylesheet" type="text/css" href="/css/projects/projects.css">
+
 	<!-- Includes for modules required by angular and angular-material -->
 
 	<script src="/node_modules/angular/angular.js"></script>
