--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
 	<link rel="stylesheet" href="/css/estimation/estimation.css">
+
 </head>
 	<body ng-controller="mainCtrl" ng-app="main" layout="row">
 			<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
@@ -69,17 +70,18 @@
 			</md-content>
 		</div>
 
+	<script src="./node_modules/d3/d3.min.js"></script>
 	<!-- Includes for our external CSS files  -->
 
 	<link rel="stylesheet" type="text/css" href="/css/projects/projects.css">
 
 	<!-- Includes for modules required by angular and angular-material -->
 
-	<script src="/node_modules/angular/angular.js"></script>
-	<script src="/node_modules/angular-aria/angular-aria.js"></script>
-	<script src="/node_modules/angular-animate/angular-animate.js"></script>
-	<script src="/node_modules/angular-material/angular-material.js"></script>
-	<script src="node_modules/angular-route/angular-route.min.js"></script>
+	<script src="./node_modules/angular/angular.js"></script>
+	<script src="./node_modules/angular-aria/angular-aria.js"></script>
+	<script src="./node_modules/angular-animate/angular-animate.js"></script>
+	<script src="./node_modules/angular-material/angular-material.js"></script>
+	<script src="./node_modules/angular-route/angular-route.min.js"></script>
 
 	<!-- Includes for our modules -->
 
