--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,9 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
 	<link rel="stylesheet" href="/css/estimation/estimation.css">
+	<link rel="stylesheet" href="./node_modules/angular-ui-tree/dist/angular-ui-tree.min.css">
+	<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" href="./css/project/tree.css">
 
 </head>
 	<body ng-controller="mainCtrl" ng-app="main" layout="row">
@@ -69,7 +72,7 @@
 				<div flex=""></div>
 			</md-content>
 		</div>
- 
+
 	<!-- Includes for our external CSS files  -->
 
 	<link rel="stylesheet" type="text/css" href="/css/projects/projects.css">
@@ -81,6 +84,11 @@
 	<script src="./node_modules/angular-animate/angular-animate.js"></script>
 	<script src="./node_modules/angular-material/angular-material.js"></script>
 	<script src="./node_modules/angular-route/angular-route.min.js"></script>
+
+	<!-- Includes tree liabary  -->
+	<script src="./node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="./node_modules/angular-ui-tree/dist/angular-ui-tree.min.js"></script>
+	<script src="./javascript/tree/main.js"></script>
 
 	<!-- Includes for our modules -->
 
@@ -98,5 +106,6 @@
 	<script src="./javascript/services/authenticationService.js"></script>
 	<script src="./javascript/services/tokenInterceptor.js"></script>
 	<script src="./javascript/services/userService.js"></script>
+
 </body>
 </html>
