Login works now

--- a/www/index.html
+++ b/www/index.html
@@ -87,5 +87,6 @@
 	<script src="./javascript/services/authenticationService.js"></script>
 	<script src="./javascript/services/tokenInterceptor.js"></script>
 	<script src="./javascript/services/userService.js"></script>
+	<script src="./javascript/services/authenticationService.js"></script>
 </body>
 </html>
