Undo function added

--- a/www/index.html
+++ b/www/index.html
@@ -87,6 +87,7 @@
 	<script src="./javascript/controllers/projects-controller.js"></script>
 	<script src="./javascript/controllers/project-controller.js"></script>
 	<script src="./javascript/controllers/login-controller.js"></script>
+	<script src="./javascript/controllers/toast-controller.js"></script>
 
 	<!-- Includes for our services -->
 
