Start work on contact chip

--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="/css/estimation/estimation.css">
 	<link rel="stylesheet" href="./node_modules/angular-ui-tree/dist/angular-ui-tree.min.css">
 	<link rel="stylesheet" href="./css/project/tree.css">
+	<link rel="stylesheet" href="./css/project/contactChip.css">
 	<link rel="stylesheet" href="/css/main/main.css">
 </head>
 	<body ng-controller="mainCtrl" ng-app="main" layout="row">
