--- a/mobile_app/www/index.html
+++ b/mobile_app/www/index.html
@@ -29,6 +29,7 @@
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="lib/angular-ui-utils/ui-utils.js"></script>
     <script src="dist/application.js"></script>
+    <script src="lib/d3/d3.min.js"></script>
     <!--<script src="dist/application.js"></script>-->
     <!--<script src="dist/application.js"></script>-->
 
